// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction Transaction create when called with a valid transaction should return created tx 1`] = `
Array [
  "d27e0d4c1504e47d06e85c510946fda57c12279da70e2bb1f3b2bc3760127368c03bbf443e562543e9827beb433e97614dff59fbfca5c5776b2fc6f237b77009",
]
`;

exports[`transaction Transaction create when called with multi-signature account in input should return created tx 1`] = `
Array [
  "d27e0d4c1504e47d06e85c510946fda57c12279da70e2bb1f3b2bc3760127368c03bbf443e562543e9827beb433e97614dff59fbfca5c5776b2fc6f237b77009",
  "",
]
`;

exports[`transaction Transaction create when called with nonce equal to zero in input should return created tx 1`] = `
Array [
  "03430d5cedeab0db30c2b32e60920d74da02e0aafde8f786ac7153deb9cf78ba6ffc955f911ff66ce690c47206a23fa53c2e1ee3e1f4850ff8c37a8fe1a6d50c",
]
`;

exports[`transaction Transaction create when called with optional keys in input should return created tx 1`] = `
Array [
  "d27e0d4c1504e47d06e85c510946fda57c12279da70e2bb1f3b2bc3760127368c03bbf443e562543e9827beb433e97614dff59fbfca5c5776b2fc6f237b77009",
]
`;

exports[`transaction Transaction create when called without sender public key in input should return created tx 1`] = `
Array [
  "d27e0d4c1504e47d06e85c510946fda57c12279da70e2bb1f3b2bc3760127368c03bbf443e562543e9827beb433e97614dff59fbfca5c5776b2fc6f237b77009",
]
`;

exports[`transaction Transaction decode transaction from input as buffer should return decoded transaction 1`] = `
Object {
  "command": "transfer",
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      116,
      198,
      128,
      147,
      238,
      181,
      55,
      166,
      114,
      181,
      57,
      160,
      183,
      70,
      212,
      192,
      169,
      102,
      248,
      94,
      221,
      18,
      148,
      116,
      213,
      248,
      112,
      41,
      174,
      250,
      16,
      185,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction decode transaction from input as hex should return decoded transaction 1`] = `
Object {
  "command": "transfer",
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      116,
      198,
      128,
      147,
      238,
      181,
      55,
      166,
      114,
      181,
      57,
      160,
      183,
      70,
      212,
      192,
      169,
      102,
      248,
      94,
      221,
      18,
      148,
      116,
      213,
      248,
      112,
      41,
      174,
      250,
      16,
      185,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction sign when called with multi-signature account in input should return created tx 1`] = `
Array [
  "d27e0d4c1504e47d06e85c510946fda57c12279da70e2bb1f3b2bc3760127368c03bbf443e562543e9827beb433e97614dff59fbfca5c5776b2fc6f237b77009",
  "746711c65d963b1fe8c6e40d64100548fb1080a943c2b53ac8466570f96c4687478a9307b45ad0172da134aa1eb9c44e2f11b3f08e790bdfd9247f3f89526508",
]
`;

exports[`transaction Transaction sign when called with optional keys in input should return created tx 1`] = `
Array [
  "d27e0d4c1504e47d06e85c510946fda57c12279da70e2bb1f3b2bc3760127368c03bbf443e562543e9827beb433e97614dff59fbfca5c5776b2fc6f237b77009",
  "746711c65d963b1fe8c6e40d64100548fb1080a943c2b53ac8466570f96c4687478a9307b45ad0172da134aa1eb9c44e2f11b3f08e790bdfd9247f3f89526508",
]
`;
